# game_theory

./: .gitignore  main.py  pyproject.toml
game_theory/: __init__.py  tournament.py
game_theory/core/: __init__.py  core.py
game_theory/game_modes/: __init__.py  classic_prisoners_dilemma.py
game_theory/strategies/: __init__.py  always_defect.py  tit4tat.py
