[tool.poetry]
name = "game-theory"
version = "0.1.0"
description = ""
authors = ["attila szuts <45080765+attilaszuts@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "game_theory"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
